# private-pypi

./: Cargo.toml
auth0_jwt/: Cargo.toml
auth0_jwt/src/: auth0.rs  claims.rs  error.rs  lib.rs  token.rs
src/: main.rs
templates/: base.html  simple.html
