[package]
name = "auth0-pypi"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "auth0_jwt",
]

[dependencies]
anyhow = "1"
auth0_jwt = { path = "auth0_jwt" }
axum = "0.2.8"
lazy_static = "1.4.0"
log = "0.4"
rusoto_s3 = "0.47.0"
rusoto_signature = "0.47.0"
rusoto_core = "0.47.0"
simplelog = "0.10"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1"
tera = "1.12.1"
tokio = { version = "1", features = ["full"] }
